src/js/components/breadcrumbs/style.scss
.pt-breadcrumbs {
  span:not(.pt-popover-target),
  li:after,
  a,
  div {
    vertical-align: middle;
  }
}

.breadcrumb-tabs {
  .pt-popover-target:not(:first-child) {
    .breadcrumb-tab {
      border-top-left-radius: 0px;
      border-bottom-left-radius: 0px;
    }
  }

  .breadcrumb-tab {
    display: inline-block;
    line-height: 19px;
    font-size: 16px;
    width: 117px;
    text-align: center;
    color: $qore-blue;
    padding: 5px 10px;
    padding-right: 10px;
    background-color: lighten($qore-cobalt, 45);
    box-shadow: inset 0 0 0 1px rgba(lighten($qore-cobalt, 15), 0.2),
      inset 0 -1px 0 rgba(lighten($qore-cobalt, 15), 0.1);

    &:first-child {
      border-top-left-radius: 4px;
      border-bottom-left-radius: 4px;
    }

    &:last-child {
      border-top-right-radius: 4px;
      border-bottom-right-radius: 4px;
    }

    &:not(:last-child) {
      margin-right: -1px;
    }

    &:not(.active) {
      transition: all 0.2s linear;
      background-color: lighten($qore-cobalt, 46);
      cursor: pointer;

      &:hover {
        background-color: lighten($qore-cobalt, 41);
      }
    }

    &.compact {
      transition: all 0.2s linear;
      cursor: pointer;

      &:hover {
        background-color: lighten($qore-cobalt, 41);
      }
    }

    &.active {
      background-color: lighten($qore-cobalt, 36);
      font-weight: 500;
      color: inherit;
    }
  }
}

.pt-breadcrumb-current {
  font-weight: 500;
}

